<resources>
    <string name="app_name">AURA</string>
    <string name="welcome_aura">Welcome to AURA</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="environment">Environment</string>
    <string name="location">Location</string>
    <string name="battery">Battery</string>
    <string name="music">Music</string>
    <string name="start_voice_command">Start Voice Command</string>
</resources>
